correct wwhitespace preservation

--- a/index.css
+++ b/index.css
@@ -12,5 +12,5 @@
 }
 
 #app .wrap {
-    white-space: pre;
+    white-space: pre-wrap;
 }
